--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+.shadow-bottomNavigation {
+  --tw-shadow: 0 -2px 3px rgba(0, 0, 0, 0.06);
+  --tw-shadow-colored: 0 -2px 3px var(--tw-shadow-color);
+}
